没想到，一点点问题居然花了我很多时间，要准备考试了

--- a/cng1985/School/Views/Shared/Site.Master
+++ b/cng1985/School/Views/Shared/Site.Master
@@ -20,6 +20,9 @@
             </div>
             <div id="menucontainer">
                 <ul id="menu">
+                <li>
+                        <%= Html.ActionLink("学校系统", "Index", "SchoolHome")%></li>
+                    <li>
                     <li>
                         <%= Html.ActionLink("新闻管理", "Index", "NewManager")%></li>
                     <li>
