--- a/trunk/jbpm/WebRoot/controls/my97/skin/whyGreen/datepicker.css
+++ b/trunk/jbpm/WebRoot/controls/my97/skin/whyGreen/datepicker.css
@@ -1,5 +1,5 @@
 /* 
- * My97 DatePicker 4.6
+ * My97 DatePicker 4.7
  * 皮肤名称:whyGreen
  */
  
@@ -59,7 +59,7 @@
 	margin-top:2px;
 	text-align:center;
 	border:0px;
-	height:16px;
+	height:20px;
 	width:50px;
 	color:#034c50;
 	background-color:transparent;
@@ -72,7 +72,7 @@
 	border:#939393 1px solid;
 	font-weight:bold;
 	color:#034c50;	
-	height:16px;
+	height:20px;
 	width:50px;
 }
 /* 菜单选择框 DIV */
@@ -100,11 +100,11 @@
 }
 /* 年选择框的偏移 DIV */
 .WdateDiv .YMenu{
-	margin-top:16px;
+	margin-top:20px;
 }
 /* 月选择框的偏移 DIV */
 .WdateDiv .MMenu{
-	margin-top:16px;
+	margin-top:20px;
 	*width:62px;
 }
 /* 时选择框的位置 DIV */
@@ -139,12 +139,22 @@
 	color:#13777e;
 	background-color:#bdebee;
 }
+.WdateDiv .WdayTable2{
+	border-collapse:collapse;
+	border:#BEE9F0 1px solid;
+}
+.WdateDiv .WdayTable2 table{
+	border:0;
+}
 /* 日期栏表格 TABLE */
 .WdateDiv .WdayTable{
 	line-height:20px;	
 	color:#13777e;
 	background-color:#edfbfb;
 	border:#BEE9F0 1px solid;
+}
+.WdateDiv .WdayTable td{
+	text-align:center;
 }
 /* 日期格的样式 TD */
 .WdateDiv .Wday{
@@ -204,7 +214,7 @@
 }
 /* 时间输入框 INPUT */
 .WdateDiv #dpTime input{
-	height:16px;
+	height:20px;
 	width:18px;
 	text-align:center;
 	color:#333;
@@ -258,7 +268,7 @@
 .WdateDiv .dpButton{ 
 	height:20px;
 	width:45px;
-	padding:2px;
+	margin-top:2px;
 	border:#38B1B9 1px solid;
 	background-color:#CFEBEE;
 	color:#08575B;
