--- a/books/res/layout/ui_main.xml
+++ b/books/res/layout/ui_main.xml
@@ -2,10 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:myapp="http://schemas.android.com/apk/res/com.baoyi.novels"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:background="@drawable/bg">
+	android:background="@drawable/mainbg">
 	<LinearLayout android:orientation="vertical"
 		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:background="@null" android:layout_marginBottom="50dip">
+		android:background="@null">
+		<LinearLayout android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:orientation="horizontal"
+			android:layout_marginTop="73dip" android:layout_marginLeft="20dip">
+			<ImageButton android:background="@null" android:id="@+id/imageButton1"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:src="@drawable/books_tushu"></ImageButton>
+			<ImageButton android:background="@null" android:src="@drawable/zuoze1"
+				android:id="@+id/imageButton2" android:layout_width="wrap_content"
+				android:layout_height="wrap_content"></ImageButton>
+			<ImageButton android:background="@null" android:src="@drawable/books_biaoti"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"
+				android:id="@+id/imageButton3"></ImageButton>
+		</LinearLayout>
 		<ListView android:layout_height="wrap_content" android:id="@+id/listView1"
 			android:layout_width="fill_parent"></ListView>
 	</LinearLayout>
