--- a/books/res/layout/book_info.xml
+++ b/books/res/layout/book_info.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/book_info_root"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:background="@drawable/bg"
+	android:layout_height="fill_parent" android:background="@drawable/mainbg"
 >
 	<LinearLayout
 		android:id="@+id/book_info_button_panel"
@@ -61,6 +61,8 @@
 			android:layout_height="wrap_content"
 			android:orientation="vertical"
 		>
+		<ImageView android:src="@drawable/toptitle"
+			android:layout_width="fill_parent" android:layout_height="wrap_content"></ImageView>
 			<ImageView
 				android:id="@+id/book_cover"
 				android:scaleType="centerInside"
