--- a/books/res/layout/network_book.xml
+++ b/books/res/layout/network_book.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/network_book_root"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:background="@drawable/bg"
+	android:layout_height="fill_parent" android:background="@drawable/mainbg"
 >
 	<LinearLayout
 		android:id="@+id/network_book_button_panel1"
@@ -91,7 +91,11 @@
 			/>
 			<TextView
 				android:id="@+id/network_book_info_title"
-				style="?android:attr/listSeparatorTextViewStyle"
+					android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20sp"
+				android:textStyle="bold"
+				android:textColor="#000000"
 			/>
 			<LinearLayout
 				android:layout_width="fill_parent"
@@ -110,7 +114,11 @@
 			</LinearLayout>
 			<TextView
 				android:id="@+id/network_book_description_title"
-				style="?android:attr/listSeparatorTextViewStyle"
+					android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20sp"
+				android:textStyle="bold"
+				android:textColor="#000000"
 			/>
 			<TextView
 				android:id="@+id/network_book_description"
@@ -121,7 +129,11 @@
 			/>
 			<TextView
 				android:id="@+id/network_book_extra_links_title"
-				style="?android:attr/listSeparatorTextViewStyle"
+					android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20sp"
+				android:textStyle="bold"
+				android:textColor="#000000"
 			/>
 			<LinearLayout
 				android:id="@+id/network_book_extra_links"
